--- a/Makeup/src/main/res/values/strings.xml
+++ b/Makeup/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">API - Maquiagem</string>
+    <string name="app_name">Galeria de Maquiagens</string>
 
     <!--Splash Screen-->
     <string name="logo_description">Logo Maquiagem</string>
